[package]
name = "kalmarity-control"
version = "0.1.2"
edition = "2021"

[dependencies]
env_logger      = "0.10"
log             = "0.4.19"
anyhow          = "1"

[dependencies.clap]
version = "4.3"
features = ["derive", "color"]

[dependencies.tokio]
version = "1.29.1"
features = ["rt-multi-thread", "signal", "parking_lot", "macros", "fs"]

[dependencies.rdkafka]
version = "0.33"
features = ["dynamic-linking", "tokio"]
