[package]
name = "kalmarity-control"
version = "0.1.3"
edition = "2021"

[dependencies]
env_logger      = "0.10"
log             = "0.4.20"
anyhow          = "1"

[dependencies.clap]
version = "4.4"
features = ["derive", "color"]

[dependencies.tokio]
version = "1.32.0"
features = ["rt-multi-thread", "signal", "parking_lot", "macros", "fs"]

[dependencies.rdkafka]
version = "0.34"
features = ["dynamic-linking", "tokio"]
